[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Amirdhesh <amirdhesh2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
pymongo = "^4.6.3"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pytest = "^8.1.1"
load-dotenv = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
